--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,13 +1,53 @@
 :root {
-	--max-width: 1100px;
+	--max-width: 1920px;
+	--margin-width: calc(var(--max-width) - 134px);
 	--border-radius: 12px;
-	--font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-		"Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-		"Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+	--card-border-radius: 20px;
+	--card-linear-gradient: background: linear-gradient(110deg,
+			rgba(0, 0, 0, 0.23) 15.06%,
+			rgba(0, 0, 0, 0) 34.48%,
+			rgba(0, 0, 0, 0) 69.77%,
+			rgba(0, 0, 0, 0.81) 85.54%);
+	--font-mono: "Inter", monospace;
+	font-size: 75px;
+}
 
-	--foreground-rgb: 0, 0, 0;
-	--background-start-rgb: 214, 219, 220;
-	--background-end-rgb: 255, 255, 255;
+* {
+	box-sizing: border-box;
+}
 
+img {
+	object-fit: cover;
+}
 
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+	margin: 0;
+}
+
+h1 {
+	font-size: 2.0667rem;
+	font-weight: 300;
+}
+
+h2 {
+	font-size: 1rem;
+}
+
+h3 {
+	font-size: 0.7333rem;
+}
+
+h4 {
+	font-size: 1.4000rem;
+	font-weight: 300;
+}
+
+p {
+	font-size: 0.3067rem;
+	line-height: 197%;
 }
