--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -3,11 +3,7 @@ nav {
 	width: 100%;
 	height: 1.4667rem;
 
-	p {
-		font-size: 0.4267rem;
-		line-height: 100%;
-		font-weight: 600;
-	}
+
 
 	p.elem,
 	a {
@@ -19,18 +15,6 @@ nav {
 	.content {
 		height: 100%;
 
-		.logo-gap {
-			gap: 0.1333rem;
-			position: relative;
-
-			.line {
-				width: 0.0267rem;
-				height: 0.6800rem;
-				background-color: #000000;
-				border-radius: 10px;
-			}
-		}
-
 		.nav-gap {
 			gap: 0.8800rem;
 		}
@@ -38,4 +22,22 @@ nav {
 	}
 
 
+}
+
+.logo {
+	gap: 0.1333rem;
+	position: relative;
+
+	p {
+		font-size: 0.4267rem;
+		line-height: 100%;
+		font-weight: 600;
+	}
+
+	.line {
+		width: 0.0267rem;
+		height: 0.6800rem;
+		background-color: #000000;
+		border-radius: 10px;
+	}
 }
