--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -11,6 +11,8 @@
 			rgba(0, 0, 0, 0) 69.77%,
 			rgba(0, 0, 0, 0.81) 85.54%);
 	--font-mono: "Inter", monospace;
+	--button-primary: #191716;
+	--white-filter: invert(83%) sepia(99%) saturate(2%) hue-rotate(43deg) brightness(108%) contrast(100%);
 	font-size: 75px;
 }
 
