--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -24,6 +24,13 @@ img {
 	object-fit: cover;
 }
 
+main {
+	max-width: var(--max-width);
+	margin: 0 auto;
+	margin-top: 1.4400rem;
+	padding-bottom: 1.9200rem;
+}
+
 h1,
 h2,
 h3,
@@ -31,6 +38,10 @@ h4,
 h5,
 p {
 	margin: 0;
+}
+
+body {
+	margin: 0 auto;
 }
 
 a {
@@ -49,6 +60,7 @@ h2 {
 
 h3 {
 	font-size: 0.7333rem;
+	font-weight: 400;
 }
 
 h4 {
