--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -115,6 +115,19 @@ section {
 	gap: 1rem;
 }
 
+//text 
+.text-center {
+	text-align: center;
+}
+
+.text-left {
+	text-align: left;
+}
+
+.text-right {
+	text-align: right;
+}
+
 //element position
 
 .center-text {
