--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -212,6 +212,48 @@ section {
 	right: 0.25rem;
 }
 
+//margin
+
+.margin-top-01 {
+	margin-top: 0.1rem;
+}
+
+.margin-top-02 {
+	margin-top: 0.2rem;
+}
+
+.margin-top-03 {
+	margin-top: 0.3rem;
+}
+
+.margin-top-04 {
+	margin-top: 0.4rem;
+}
+
+.margin-top-05 {
+	margin-top: 0.5rem;
+}
+
+.margin-top-06 {
+	margin-top: 0.6rem;
+}
+
+.margin-top-07 {
+	margin-top: 0.7rem;
+}
+
+.margin-top-08 {
+	margin-top: 0.8rem;
+}
+
+.margin-top-09 {
+	margin-top: 0.9rem;
+}
+
+.margin-top-10 {
+	margin-top: 1rem;
+}
+
 //sizing
 
 .margin-width {
