--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -12,7 +12,6 @@
 	gap: .7rem;
 	cursor: pointer;
 
-
 	&.primary {
 		background: var(--button-primary);
 		border: none;
@@ -33,6 +32,7 @@
 		user-select: none;
 		width: 100%;
 		text-wrap: nowrap;
+		color: black;
 	}
 
 	img {
