--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,8 +1,9 @@
 @import './styles.scss';
+@import './scss_lib/breakpoints.scss';
 
 :root {
 	--max-width: 1920px;
-	--margin-width: calc(var(--max-width) - 134px);
+	--margin-width: calc(var(--max-width) - 1.7867rem);
 	--border-radius: 12px;
 	--card-border-radius: 20px;
 	--card-linear-gradient-1: linear-gradient(180deg,
@@ -14,6 +15,31 @@
 	--button-primary: #191716;
 	--white-filter: invert(83%) sepia(99%) saturate(2%) hue-rotate(43deg) brightness(108%) contrast(100%);
 	font-size: 75px;
+
+	@include media('<=LGdesktop') {
+		font-size: 75px;
+		--max-width: 100vw;
+	}
+
+	@include media('<=MDdesktop') {
+		font-size: 62.5px;
+	}
+
+	@include media('<=desktop') {
+		font-size: 56.25px;
+	}
+
+	@include media('<=LGlaptop') {
+		font-size: 50px;
+	}
+
+	@include media('<=laptop') {
+		font-size: 40px;
+	}
+
+	@include media('<=LGtablet') {
+		font-size: 35.6px;
+	}
 }
 
 * {
