--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -16,8 +16,12 @@
 	--white-filter: invert(83%) sepia(99%) saturate(2%) hue-rotate(43deg) brightness(108%) contrast(100%);
 	font-size: 75px;
 
-	@include media('<=LGdesktop') {
+	@include media('>=desktop') {
 		font-size: 75px;
+	}
+
+	@include media('<=LGdesktop') {
+		font-size: 70px;
 		--max-width: 100vw;
 	}
 
@@ -81,15 +85,18 @@ h1 {
 	font-weight: 300;
 }
 
+//title-2
 h2 {
 	font-size: 1rem;
 }
 
+//sub-title
 h3 {
 	font-size: 0.7333rem;
 	font-weight: 400;
 }
 
+//title-4
 h4 {
 	font-size: 1.4000rem;
 	font-weight: 300;
