--- a/src/styles/pages/landing.scss
+++ b/src/styles/pages/landing.scss
@@ -34,4 +34,29 @@ main.landing {
 
 		}
 	}
+
+	.we-do {
+		&-block {
+			gap: 0.7200rem;
+
+			&-1 {
+				//something
+			}
+
+			.photo-container {
+				gap: 0.2rem;
+
+				img {
+					width: 100%;
+					height: 3.9200rem;
+				}
+			}
+		}
+
+		&-section {
+			gap: 0.7200rem;
+		}
+
+	}
+
 }
