--- a/src/styles/pages/landing.scss
+++ b/src/styles/pages/landing.scss
@@ -61,7 +61,33 @@ main.landing {
 
 	.events {
 		&-grid {
+			width: var(--margin-width);
+			max-height: 10.0933rem;
 			display: grid;
+			grid-template-columns: 1fr 1fr .62fr;
+			grid-gap: 0.2800rem 0.3867rem;
+			grid-auto-rows: 4.9067rem;
+
+			.event {
+				display: block;
+
+				&-1 {
+					grid-row: span 2;
+				}
+
+				&-flex {
+					display: flex;
+					flex-direction: column;
+					justify-content: space-between;
+					height: 100%;
+					gap: 0.2533rem;
+
+					div {
+						flex: 1;
+					}
+				}
+
+			}
 		}
 	}
 
