--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -3,7 +3,8 @@ footer {
 	height: 6.2667rem;
 	padding-top: 0.7733rem;
 	padding-bottom: 0.5067rem;
-	filter: drop-shadow(0px -6px 64px rgba(0, 0, 0, 0.03999999910593033));
+	filter: drop-shadow(0px -6px 64px rgba(0, 0, 0, 0.01999999910593033));
+	background: #fff;
 
 	.content {
 		width: var(--margin-width);
