--- a/src/styles/gradient-card.scss
+++ b/src/styles/gradient-card.scss
@@ -40,6 +40,11 @@
 		background: var(--card-linear-gradient-4);
 	}
 
+	&.c5 {
+		background: var(--card-linear-gradient-5);
+
+	}
+
 	img {
 		position: absolute;
 		width: 100%;
@@ -54,7 +59,8 @@
 		height: 100%;
 		display: flex;
 		align-items: flex-end;
-		padding-bottom: 0.1067rem;
+		padding-bottom: 0.1467rem;
 		padding-left: 0.275rem;
 	}
+
 }
