--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -5,6 +5,7 @@
 	--max-width: 1920px;
 	--margin-width: calc(var(--max-width) - 1.7867rem);
 	--border-radius: 12px;
+	--border-color: #E1E1E1;
 	--card-border-radius: 20px;
 	--card-linear-gradient-1: linear-gradient(180deg,
 			rgba(0, 0, 0, 0.23) 15.06%,
