--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,10 +1,22 @@
 footer {
+	position: relative;
 	margin-top: auto;
 	height: 6.2667rem;
 	padding-top: 0.7733rem;
 	padding-bottom: 0.5067rem;
-	filter: drop-shadow(0px -6px 64px rgba(0, 0, 0, 0.01999999910593033));
 	background: #fff;
+	box-shadow: 0px -6px 64px rgba(0, 0, 0, 0.03999999910593033);
+
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: #fff;
+		z-index: -1;
+	}
 
 	.content {
 		width: var(--margin-width);
