--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,14 +1,4 @@
-button,
-input[type="submit"],
-input[type="reset"] {
-	background: none;
-	color: inherit;
-	border: none;
-	padding: 0;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
-}
+@import '../app/scss_lib/breakpoints.scss';
 
 .button {
 	display: flex;
@@ -24,6 +14,13 @@ input[type="reset"] {
 	gap: .7rem;
 	cursor: pointer;
 	text-align: left;
+
+	@include onMobile() {
+		padding: 0.25rem 0;
+		padding-left: 0.5333rem;
+		padding-right: 0.4444867rem;
+	}
+
 
 	&.primary {
 		background: var(--button-primary);
@@ -46,11 +43,22 @@ input[type="reset"] {
 		width: 100%;
 		text-wrap: nowrap;
 		color: black;
+
+		@include onMobile() {
+			transform: translateY(0.015rem);
+			font-size: 0.5029rem;
+			line-height: 110%;
+		}
 	}
 
 	img {
 		width: 0.3067rem;
 		height: auto;
 		object-fit: fill;
+
+		@include onMobile() {
+			width: 0.4474rem;
+
+		}
 	}
 }
