--- a/src/styles/pages/consultation.scss
+++ b/src/styles/pages/consultation.scss
@@ -1,6 +1,14 @@
 main.consultation {
+	margin-top: 1rem;
+
+	h4 {
+		margin: 0
+	}
+
 	.container-father {
 		gap: 0.2533rem;
+		justify-content: flex-start;
+		margin-top: 0.8000rem;
 	}
 
 	.container {
