--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -809,6 +809,10 @@ img {
 		width: 100% !important;
 	}
 
+	.m-max-width {
+		max-width: 100% !important;
+	}
+
 	//height stuff
 	.m-height-fit {
 		height: fit-content !important;
@@ -816,6 +820,10 @@ img {
 
 	.m-height-fill {
 		height: 100% !important;
+	}
+
+	.m-max-height {
+		max-height: 100% !important;
 	}
 
 	//text stuff
