--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -1,3 +1,5 @@
+@import '../../app/scss_lib/breakpoints.scss';
+
 main.about-page {
 
 	$shadow: 0px 4px 48px rgba(0, 0, 0, 0.11);
@@ -17,6 +19,10 @@ main.about-page {
 			border-radius: 29px;
 			object-fit: cover;
 			box-shadow: $shadow;
+
+			@include onMobile() {
+				height: 12.3243rem;
+			}
 		}
 	}
 
@@ -29,18 +35,30 @@ main.about-page {
 			max-height: 7.7200rem;
 			border-radius: 13px;
 			box-shadow: $shadow;
+
+			@include onMobile() {
+				max-height: 12.4400rem;
+				height: 7rem;
+			}
 		}
 	}
 
 	.photography-to-us {
 		margin-top: 1.4933rem;
 
+		h4 {
+			font-size: 1.1351rem !important;
+		}
+
 		.container {
 			margin-top: 0.4267rem;
 			gap: 0.9200rem;
 
 			h2 {
-				font-size: 0.7067rem;
+				@include notMobile() {
+					font-size: 0.7067rem;
+				}
+
 			}
 
 			.sub-block {
@@ -52,6 +70,11 @@ main.about-page {
 				height: 10.4400rem;
 				border-radius: 15px;
 				box-shadow: $shadow;
+
+				@include onMobile() {
+					width: 100%;
+					height: 7.7027rem;
+				}
 			}
 		}
 	}
