--- a/src/styles/pages/consultation.scss
+++ b/src/styles/pages/consultation.scss
@@ -1,3 +1,5 @@
+@import '../../app/scss_lib/breakpoints.scss';
+
 main.consultation {
 	margin-top: 1rem;
 
@@ -23,6 +25,19 @@ main.consultation {
 		.text-message {
 			padding-left: 0.4933rem;
 			gap: 0.3333rem;
+
+			img {
+				$dimension: 0.8533rem;
+				width: $dimension;
+				height: $dimension;
+
+				@include onMobile() {
+					$dimension: 1.0667rem;
+					width: $dimension;
+					height: $dimension;
+				}
+
+			}
 
 			p {
 				transform: translateY(0.0125rem);
