--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -19,11 +19,83 @@ nav {
 	.content {
 		height: 100%;
 
+
 		.nav-gap {
 			gap: 0.8800rem;
 		}
 
 	}
+
+	.hamburger {
+
+		z-index: 100001;
+
+		img {
+			width: 49px;
+			height: 37px;
+			transition: transform 0.3s;
+		}
+
+		&.open {
+			img {
+				transform: rotate(90deg);
+			}
+		}
+	}
+
+	@keyframes fadeIn {
+		from {
+			opacity: 0;
+		}
+
+		to {
+			opacity: 1;
+		}
+	}
+
+	.mobile {
+		background-color: #ffffff;
+		$delay: 175ms;
+
+		&-nav {
+			width: 100%;
+			min-height: 20vh;
+			position: fixed;
+			z-index: 10000;
+			display: none;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			background-color: #ffffff;
+			top: 0;
+			left: 0;
+			animation: fadeIn $delay;
+			padding: 14vh .7rem 2vh .7rem;
+
+			&.open {
+				display: flex;
+			}
+		}
+
+		&-backdrop {
+			position: fixed;
+			display: none;
+			top: 0;
+			height: 100vh;
+			width: 100%;
+			background-color: rgba(0, 0, 0, 0.5);
+			z-index: 9999;
+			top: 0;
+			left: 0;
+
+			animation: fadeIn $delay;
+
+			&.open {
+				display: block;
+			}
+		}
+	}
+
 
 
 }
@@ -31,6 +103,8 @@ nav {
 .logo {
 	gap: 0.1333rem;
 	position: relative;
+	z-index: 100001;
+	background: transparent;
 
 	p {
 		font-size: 0.4267rem;
