--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -79,7 +79,8 @@ nav {
 			.logo-nav {
 				position: absolute;
 				top: 1.4rem;
-				left: .5rem;
+				left: .0rem;
+				transform: scale(.8);
 			}
 		}
 
