--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -26,6 +26,19 @@ main.about-page {
 		}
 	}
 
+	.dj {
+
+		margin-top: 1.4933rem;
+
+		.left {
+			img {
+				width: 9.5rem;
+				height: 10rem;
+				border-radius: var(--border-radius);
+			}
+		}
+	}
+
 	.based-in {
 		margin-top: 1.4933rem;
 
