--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -32,7 +32,7 @@ main.about-page {
 
 		.left {
 			img {
-				width: 9.5rem;
+				max-width: 9.5rem;
 				height: 10rem;
 				border-radius: var(--border-radius);
 			}
