--- a/src/styles/textarea.scss
+++ b/src/styles/textarea.scss
@@ -5,6 +5,7 @@ textarea {
 	min-height: 5.2533rem;
 	padding-top: .2rem;
 	padding-left: 0.3600rem;
+	padding-right: 0.3600rem;
 	font-size: 0.4000rem;
 	font-family: 'Inter', sans-serif;
 	resize: vertical;
